<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_estatus_background">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="00dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/estatus_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:text="@string/razon_motivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
        
        <ImageView
            android:id="@+id/iv_en_transito"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/on_the_way_icon"
            android:background="@drawable/estatus_selector"
            app:layout_constraintTop_toBottomOf="@id/tv_title_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_entregado"/>

    <TextView
        android:id="@+id/tv_en_transito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/en_transito"
        app:layout_constraintTop_toBottomOf="@id/iv_en_transito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_entregado"/>

    <ImageView
        android:id="@+id/iv_entregado"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/delivered_icon"
        android:background="@drawable/estatus_selector"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog"
        app:layout_constraintStart_toEndOf="@id/iv_en_transito"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_entregado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/entregado"
        app:layout_constraintTop_toBottomOf="@id/iv_en_transito"
        app:layout_constraintStart_toEndOf="@id/tv_en_transito"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_cancelado"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/canceled_icon"
        android:background="@drawable/estatus_selector"
        app:layout_constraintTop_toBottomOf="@id/tv_en_transito"
        app:layout_constraintStart_toStartOf="@id/iv_detenido"
        app:layout_constraintEnd_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_cancelado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/cancelado"
        app:layout_constraintTop_toBottomOf="@id/iv_cancelado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_detenido"/>

    <ImageView
        android:id="@+id/iv_detenido"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/stopped_icon"
        android:background="@drawable/estatus_selector"
        app:layout_constraintTop_toBottomOf="@id/tv_entregado"
        app:layout_constraintStart_toEndOf="@id/iv_cancelado"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_detenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/detenido"
        app:layout_constraintTop_toBottomOf="@id/iv_detenido"
        app:layout_constraintStart_toEndOf="@id/tv_cancelado"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_motivo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="5dp"
        android:hint="@string/ingrese_el_motivo_del_cambio"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:minLines="5"
        android:inputType="textMultiLine"
        android:background="@drawable/motivo_background"
        app:layout_constraintTop_toBottomOf="@id/tv_cancelado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_actualilzar"/>

    <Button
        android:id="@+id/btn_actualilzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/actualizar"
        android:backgroundTint="@color/contrast"
        app:layout_constraintTop_toBottomOf="@id/et_motivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>